# accidental_synth

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.backup  CHANGELOG.md  Cargo.toml  LICENSE  MIDI_IMPLEMENTATION_CHART.md  PATCHES.md  README.md  USER_MANUAL.md  build.rs  deny.toml
.cargo/: config.toml
.understand-anything/: .understandignore  knowledge-graph.json
crates/accidental-synth/: Cargo.toml  build.rs
crates/accidental-synth/src/: main.rs  ui.rs
crates/accidental-synth/src/ui/: callbacks.rs  constants.rs  set_slint_values.rs  structs.rs  update_listener.rs
crates/accidental-synth/src/ui/callbacks/: effects.rs  filter.rs  global.rs  modulation.rs  oscillators.rs  settings.rs
crates/accidental-synth/ui/: components.slint  constants.slint  custom-widgets.slint  effects-panel.slint  effects.slint  filter-panel.slint  global-panel.slint  header-panel.slint  main.slint  oscillator-panel.slint  settings-panel.slint  theme.slint
crates/accsyn-audio/: Cargo.toml
crates/accsyn-audio/src/: constants.rs  control_listener.rs  device_monitor.rs  lib.rs  output_loop.rs  sample_convert.rs
crates/accsyn-core/: Cargo.toml
crates/accsyn-core/src/: casting.rs  defaults.rs  effects.rs  lib.rs  math.rs  midi_events.rs  parameter_types.rs  synth_events.rs  ui_events.rs
crates/accsyn-engine/: Cargo.toml
crates/accsyn-engine/src/: lib.rs
crates/accsyn-engine/src/modules/: amplifier.rs  effects.rs  envelope.rs  filter.rs  lfo.rs  mixer.rs  mod.rs  oscillator.rs
crates/accsyn-engine/src/modules/effects/: autopan.rs  bitcrusher.rs  bitshifter.rs  chorus.rs  clipper.rs  compressor.rs  constants.rs  delay.rs  flanger.rs  gate.rs  rectifier.rs  saturation.rs  tremolo.rs  wavefolder.rs
crates/accsyn-engine/src/modules/oscillator/: am.rs  broken.rs  constants.rs  fm.rs  generate_wave_trait.rs  noise.rs  pm.rs  pulse.rs  ramp.rs  saw.rs  sine.rs  square.rs  supersaw.rs  triangle.rs
crates/accsyn-engine/src/synthesizer/: clock.rs  constants.rs  event_listener.rs  midi_messages.rs  midi_value_converters.rs  mod.rs  patches.rs  sample_generator.rs  set_parameters.rs
crates/accsyn-engine/src/synthesizer/patches/: a-slightly-warmer-fm.json  acid-squelch.json  acid-time.json  alien-invasion.json  ambient-drone.json  analog-nostalgia.json  arpable-dirty-fm.json  bass-erosion.json  bright-lead.json  buzz-brass.json  chorus-organ.json  deep-bass.json  dirty-bass-echo.json  drifting-pad.json  electric-piano.json  fm-bells.json  glass-marimba.json  guys-I-think-I-Broke-It.json  hard-bass-pulse.json  harsh-industrial.json  house-hits.json  init.json  kick-long.json  kick-short.json  m7-noise-arp.json  major-6-bounce.json  noisecore-drone.json  phase-mod-bass-pulse.json  plucky-bass.json  plucky-keys.json  power-chords.json  rave-chord.json  reverse-bass-swells.json  reverse-pulse-lead.json  sci-fi.json  shred-auto-arp.json  singing-bowls.json  slide-bass.json  supersaw-5ths-repeater.json  supersaw-swirl.json  (+5 more)
crates/accsyn-engine/tests/: dsp_chain.rs  patch_loading.rs  synthesizer.rs
crates/accsyn-engine/tests/fixtures/: adversarial-patch.json  schema-snapshot.json
crates/accsyn-midi/: Cargo.toml
crates/accsyn-midi/src/: constants.rs  control_change.rs  device_monitor.rs  input_listener.rs  lib.rs
crates/accsyn-types/: Cargo.toml
crates/accsyn-types/src/: audio_events.rs  casting.rs  defaults.rs  effects.rs  effects_index.rs  lib.rs  math.rs  midi_events.rs  parameter_types.rs  synth_events.rs  ui_events.rs
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  controls.md  getting-started.md  introduction.md  midi-implementation.md  patch-format.md  settings-menu.md  signal-flow.md
docs/tools/: generate_signal_flow.py
presets/: Sci_Fi.json
src/: audio.rs  defaults.rs  envelope.rs  main.rs  math.rs  midi.rs  modules.rs  synthesizer.rs  ui.rs
src/audio/: constants.rs  device_monitor.rs
src/midi/: constants.rs  control_change.rs  device_monitor.rs  input_listener.rs
src/modules/: amplifier.rs  effects.rs  envelope.rs  filter.rs  lfo.rs  mixer.rs  oscillator.rs  tuner.rs
src/modules/effects/: autopan.rs  bitshifter.rs  clipper.rs  compressor.rs  constants.rs  delay.rs  gate.rs  rectifier.rs  saturation.rs  tremolo.rs  wavefolder.rs
src/modules/oscillator/: am.rs  constants.rs  fm.rs  gigasaw.rs  noise.rs  pulse.rs  ramp.rs  saw.rs  sine.rs  square.rs  super_saw.rs  supersaw.rs  triangle.rs
src/synthesizer/: constants.rs  create_synthesizer.rs  event_listener.rs  midi_messages.rs  midi_value_converters.rs  sample_generator.rs  set_parameters.rs  sine.rs  tuner.rs
src/ui/: callbacks.rs  constants.rs  structs.rs  update_listener.rs
src/ui/callbacks/: effects.rs  filter.rs  global.rs  modulation.rs  oscillators.rs  settings.rs
ui/: components.slint  constants.slint  custom-widgets.slint  effects-panel.slint  effects.slint  filter-panel.slint  global-panel.slint  header-panel.slint  main.slint  oscillator-panel.slint  settings-panel.slint  settings.slint  theme.slint
