[package]
name = "accidental-synth"
version = "0.1.1"
description = "Accidental Synthesizer"
authors = ["Dave White"]
license = "Apache-2.0"
edition = "2024"
publish = false
build = "build.rs"

[profile.release]
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1

# Note: This application currently only supports macOS due to CoreAudio-specific
# device monitoring. Cross-platform support may be added in the future.

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
core-foundation = "0.10.1"
coreaudio-sys = "0.2.17"
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.29", features = ["kv"] }
midir = "0.10.3"
rand = "0.9.2"
rtrb = "0.3.2"
slint = "1.14.1"
thiserror = "2.0.17"
strum = { version = "0.27.2" }
strum_macros = "0.27.2"

[build-dependencies]
slint-build = "1.14.1"

[package.metadata.cargo-machete]
ignored = ["slint-build"]
