[workspace]
members = [
    "crates/accsyn-types",
    "crates/accsyn-engine",
    "crates/accsyn-audio",
    "crates/accsyn-midi",
    "crates/accidental-synth",
]
resolver = "3"

[workspace.package]
version = "0.1.3"
authors = ["Dave White"]
license = "Apache-2.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Internal crates
accsyn-types = { path = "crates/accsyn-types" }
accsyn-engine = { path = "crates/accsyn-engine" }
accsyn-audio = { path = "crates/accsyn-audio" }
accsyn-midi = { path = "crates/accsyn-midi" }

# External dependencies
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
core-foundation = "0.10.1"
coreaudio-sys = "0.2.17"
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.29", features = ["kv"] }
midir = "0.10.3"
rand = "0.9.2"
rtrb = "0.3.2"
slint = "1.15.0"
slint-build = "1.15.0"
thiserror = "2.0.18"
strum = "0.27.2"
strum_macros = "0.27.2"

[profile.release]
debug = false
strip = true
lto = "thin"
panic = "abort"
opt-level = 2
codegen-units = 4

[profile.release.package.accsyn-engine]
opt-level = 3
codegen-units = 1

[profile.release.package.accsyn-audio]
opt-level = 3
codegen-units = 1

# The slint macro expansion does NOT like aggressive opt-levels so leave it low
# There are no hot path elements in the binary crate anyway
[profile.release.package.accidental-synth]
opt-level = 1
codegen-units = 16
