[workspace]
members = [
    "crates/accsyn-core",
    "crates/accsyn-engine",
    "crates/accsyn-audio",
    "crates/accsyn-midi",
    "crates/accidental-synth",
]
resolver = "3"

[workspace.package]
version = "0.0.0" #Switched to CalVer
authors = ["Dave White"]
license = "Apache-2.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Internal crates
accsyn-core = { path = "crates/accsyn-core" }
accsyn-engine = { path = "crates/accsyn-engine" }
accsyn-audio = { path = "crates/accsyn-audio" }
accsyn-midi = { path = "crates/accsyn-midi" }

# External dependencies
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
core-foundation = "0.10.1"
coreaudio-sys = "0.2.17"
cpal = "=0.17.1"
crossbeam-channel = "0.5.15"
env_logger = { version = "0.11.10", features = ["kv"] }
log = { version = "0.4.29", features = ["kv"] }
midir = "0.11.0"
rand = "0.10.1"
rtrb = "0.3.3"
slint = "1.16.0"
slint-build = "1.16.0"
thiserror = "2.0.18"
strum = "0.28.0"
strum_macros = "0.28.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sanitize-filename = "0.6.0"
dirs = "6.0.0"
vergen = { version = "9.1.0", features = ["build"] }

[profile.release]
debug = false
strip = true
lto = "thin"
panic = "abort"
opt-level = 2
codegen-units = 4

[profile.release.package.accsyn-engine]
opt-level = 3
codegen-units = 1

[profile.release.package.accsyn-audio]
opt-level = 3
codegen-units = 1

# The slint macro expansion does NOT like aggressive opt-levels so leave it low
# There are no hot path elements in the binary crate anyway
[profile.release.package.accidental-synth]
opt-level = 1
codegen-units = 16
