[package]
name = "accsyn-core"
description = "Shared types, helper functions, constants, and defaults for Accidental Synthesizer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["strum"]