[package]
name = "accsyn-engine"
description = "Synthesizer engine and DSP modules for Accidental Synthesizer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
accsyn-types = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rtrb = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sanitize-filename = { workspace = true }
dirs = { workspace = true }